# Advent-of-Code-2022

./: Cargo.toml  test.txt
inputs/: input7.txt
src/: main.rs
