[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apint = {git = "https://github.com/Robbepop/apint"}
colored = "2.0.0"
minifb = "0.23.0"
num = "0.4.0"
rand = "0.8.5"
regex = "1.7.0"
